crates/uitest/fixtures/ty_check/storage_packed_array_invalid_bits.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/storage_packed_array_invalid_bits.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ storage_packed_array_invalid_bits.fe:12:7
   │
12 │     a.get(0)
   │       ^^^ `PackedBits<7>` doesn't implement `ValidPackedBits`
   │
   ┌─ src/evm/storage_packed_array.fe:78:29
   │
78 │     where PackedBits<BITS>: ValidPackedBits
   │                             --------------- required by this bound on `get`

error[6-0003]: trait bound is not satisfied
   ┌─ storage_packed_array_invalid_bits.fe:16:7
   │
16 │     a.get(0)
   │       ^^^ `PackedBits<24>` doesn't implement `ValidPackedBits`
   │
   ┌─ src/evm/storage_packed_array.fe:78:29
   │
78 │     where PackedBits<BITS>: ValidPackedBits
   │                             --------------- required by this bound on `get`

error[6-0003]: trait bound is not satisfied
   ┌─ storage_packed_array_invalid_bits.fe:20:7
   │
20 │     a.get(0)
   │       ^^^ `PackedBits<0>` doesn't implement `ValidPackedBits`
   │
   ┌─ src/evm/storage_packed_array.fe:78:29
   │
78 │     where PackedBits<BITS>: ValidPackedBits
   │                             --------------- required by this bound on `get`

error[6-0003]: trait bound is not satisfied
   ┌─ storage_packed_array_invalid_bits.fe:24:7
   │
24 │     a.get(0)
   │       ^^^ `PackedBits<256>` doesn't implement `ValidPackedBits`
   │
   ┌─ src/evm/storage_packed_array.fe:78:29
   │
78 │     where PackedBits<BITS>: ValidPackedBits
   │                             --------------- required by this bound on `get`
